# wf24

./: .gitignore  CMakeLists.txt  README.md  build.bat  lv_conf.h
assets/: saturn_v.c  saturn_v_colored.c
src/: main.c  saturn_v_outline.c  ui.c  ui.h
